build_error.log
> Task :app:preBuild UP-TO-DATE
> Task :app:preWhatsappDebugBuild UP-TO-DATE
> Task :app:compileWhatsappDebugAidl UP-TO-DATE
> Task :app:checkKotlinGradlePluginConfigurationErrors SKIPPED
> Task :app:dataBindingMergeDependencyArtifactsWhatsappDebug UP-TO-DATE
> Task :app:generateWhatsappDebugMaterialThemeBuilderRes
> Task :app:generateWhatsappDebugResValues UP-TO-DATE
> Task :app:generateWhatsappDebugResources UP-TO-DATE
> Task :app:mergeWhatsappDebugResources UP-TO-DATE
> Task :app:packageWhatsappDebugResources UP-TO-DATE
> Task :app:processWhatsappDebugNavigationResources UP-TO-DATE
> Task :app:parseWhatsappDebugLocalResources UP-TO-DATE
> Task :app:dataBindingGenBaseClassesWhatsappDebug UP-TO-DATE
> Task :app:generateWhatsappDebugBuildConfig UP-TO-DATE
> Task :app:generateWhatsappDebugMaterialThemeBuilderSource
> Task :app:checkWhatsappDebugAarMetadata UP-TO-DATE
> Task :app:compileWhatsappDebugNavigationResources UP-TO-DATE
> Task :app:mapWhatsappDebugSourceSetPaths UP-TO-DATE
> Task :app:createWhatsappDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksWhatsappDebug UP-TO-DATE
> Task :app:processWhatsappDebugMainManifest UP-TO-DATE
> Task :app:processWhatsappDebugManifest UP-TO-DATE
> Task :app:processWhatsappDebugManifestForPackage UP-TO-DATE
> Task :app:processWhatsappDebugResources UP-TO-DATE
> Task :app:compileWhatsappDebugKotlin NO-SOURCE
> Task :app:javaPreCompileWhatsappDebug UP-TO-DATE

> Task :app:compileWhatsappDebugJavaWithJavac FAILED
/Users/mubasharhussain/Developer/Android Projects/WaEnhancer/app/src/main/java/com/wmods/wppenhacer/xposed/features/media/CallRecording.java:518: error: cannot find symbol
                            try (FileInputStream fis = new FileInputStream(mixPcm);
                                 ^
  symbol:   class FileInputStream
  location: class CallRecording
/Users/mubasharhussain/Developer/Android Projects/WaEnhancer/app/src/main/java/com/wmods/wppenhacer/xposed/features/media/CallRecording.java:518: error: cannot find symbol
                            try (FileInputStream fis = new FileInputStream(mixPcm);
                                                           ^
  symbol:   class FileInputStream
  location: class CallRecording
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors

[Incubating] Problems report is available at: file:///Users/mubasharhussain/Developer/Android%20Projects/WaEnhancer/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileWhatsappDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  /Users/mubasharhussain/Developer/Android Projects/WaEnhancer/app/src/main/java/com/wmods/wppenhacer/xposed/features/media/CallRecording.java:518: error: cannot find symbol
                              try (FileInputStream fis = new FileInputStream(mixPcm);
                                   ^
    symbol:   class FileInputStream
    location: class CallRecording
  /Users/mubasharhussain/Developer/Android Projects/WaEnhancer/app/src/main/java/com/wmods/wppenhacer/xposed/features/media/CallRecording.java:518: error: cannot find symbol
                              try (FileInputStream fis = new FileInputStream(mixPcm);
                                                             ^
    symbol:   class FileInputStream
    location: class CallRecording
  Note: Some input files use or override a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
  Note: Some input files use unchecked or unsafe operations.
  Note: Recompile with -Xlint:unchecked for details.
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 1s
23 actionable tasks: 3 executed, 20 up-to-date
